fixed background overflow

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -8,7 +8,15 @@
     @font-face {
     }
 
+    html {
+        @apply w-full h-full;
+    }
+
     body {
-        @apply bg-gray-900;
+        @apply bg-gray-900 w-full h-full;
+    }
+
+    #__next {
+        @apply w-full h-full;
     }
 }
